Fix Audio Controls not Showing on Chromium Browsers

--- a/styles/main.css
+++ b/styles/main.css
@@ -209,7 +209,6 @@ footer {
 .box-music audio {
 	width: 100%;
 	max-width: 18rem;
-	height: auto;
 }
 .box-music h2 {
 	font-size: 1rem;
